--- a/style.css
+++ b/style.css
@@ -1,49 +1,52 @@
+/* código omitido */
+
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
+    background-color: var(--card-back-color);
+}
+
+/* código omitido *//* código omitido */
+
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+--text-color: #DBE4EF;
+--card-front-color: #144480;
+--card-back-color: #00F4BF;
 }
 
-body {
-    background: url('img/bg-desktop.webp');
-    font-family: Bai Jamjuree;
+/* código omitido *//* código omitido */
+
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
+    background-color: rdba(0, 244, 191, 1);
 }
 
-#container {
-    display: flex; 
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 4rem;
-    gap: 3rem;
+/* código omitido *//* código omitido */
+
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
+    background-color: rdba(0, 244, 191, 0.2);
 }
 
-.cartao {
-    margin: 1rem 1rem;
-    height: 20rem;
-    flex-grow: 1;
-    flex-basis: calc(33% - 6rem);
+/* código omitido *//* código omitido */
+
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
+    background-color: rdba(0, 244, 191, 0.2);
+    border: 4px solid var(--card-back-color);;
 }
 
-.cartao__conteudo {
-    background-color: var(--card-front-color);
-    text-align: center;
-    /* background-color: aquamarine; */
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 300ms ease-in-out;
-}
+/* código omitido *//* código omitido */
 
-.cartao__conteudo h3 {
-    color: var(--text-color);
-    border: 1px solid var(--text-color);
-    text-align: left;
-    padding: 0.5rem;
-    position: absolute;
-    margin: 0.6rem;
-    border-radius: 0.6rem;
-    font-size: 1vw;
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta {
     backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
 }
+
+/* código omitido *//* código omitido */
 
 .cartao__conteudo p {
     margin-top: 1rem;
@@ -52,64 +55,61 @@ body {
     font-size: 1.4vw;
 }
 
-.cartao__conteudo__pergunta p {
-    color: var(--text-color);
-    font-weight: 500;
-}
+/* código omitido *//* código omitido */
 
-.cartao__conteudo__resposta p {
-    color: var(--card-back-color);
-    font-weight: 700;
-}
+@media (max-width: 560 px) {
 
-.cartao.active .cartao__conteudo {
-    transform: rotateY(180deg);
-}
+}/* código omitido */
 
-.cartao__conteudo__pergunta,
-.cartao__conteudo__resposta {
-    backface-visibility: hidden;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-}
+@media (max-width: 560 px) {
 
-.cartao__conteudo__resposta {
-    transform: rotateY(180deg);
-    background-color: rgba(0, 244, 191, 0.2);
-    border: 4px solid var(--card-back-color);
-}
-
-footer {
-    background-color: black;
-    color: white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
-}
-
-footer p {
-    text-align: center;
-    font-size: 0.6rem;
-    margin-top: 0.5rem;
-}
-
-@media (max-width: 560px) {
-    
     body {
-        background: url('img/bg-mobile.webp'), no-repeat cover;
+        background: url('img/bd-mobile.webp');
     }
 
+}/* código omitido */
+
+@media (max-width: 560 px) {
+
+    body {
+        background: url('img/bd-mobile.webp');
+    }
+    
     .cartao {
-        flex: 1 0 calc(100% - 1rem)
+        flex: 1 0 calc(100% - 1rem);
     }
 
+}/* código omitido */
+
+@media (max-width: 560 px) {
+
+    body {
+        background: url('img/bd-mobile.webp');
+    }
+    
+    .cartao {
+        flex: 1 0 calc(100% - 1rem);
+    }
+    
     .cartao__conteudo h3 {
         font-size: 3vw;
     }
+}/* código omitido */
 
+@media (max-width: 560 px) {
+
+    body {
+        background: url('img/bd-mobile.webp');
+    }
+    
+    .cartao {
+        flex: 1 0 calc(100% - 1rem);
+    }
+    
+    .cartao__conteudo h3 {
+        font-size: 3vw;
+    }
+    
     .cartao__conteudo p {
         font-size: 3.8vw;
     }
